--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">School App</string>
+    <string name="app_name">One Touch</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="agreement_instructions">This application uses Near Field Communication network (N.F.C) to communicate with other gadgets. In order to continue using it, you have to consent. If you allow this, click on I agree button.</string>
+    <string name="attending">Attending..</string>
 </resources>
