--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="agreement_instructions">This application uses Near Field Communication network (N.F.C) to communicate with other gadgets. In order to continue using it, you have to consent. If you allow this, click on I agree button.</string>
     <string name="attending">Attending..</string>
+    <string name="scanning">Scanning..</string>
 </resources>
